--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- Custom js loading -->
     <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/lang.js"></script>
 </head>
 
 <body>
