--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,27 @@
     margin-left: 5vw;
     height: 35px;
 }
+
+.privacy-policy {
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+
+    padding: 20px 20px 20px 20px;
+
+    background-color: #efefef;
+}
+
+.privacy-policy ol {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+.privacy-policy li {
+    list-style-type: decimal;
+}
