--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>wybierz-prezent.pl</title>
+    <title>{{ page.title }} - wybierz-prezent.pl</title>
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
