login removed + some style changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
           <li><a href="#">{{ "Find" | translate }}</a></li>
           <li><a href="#">{{ "FAQ" | translate }}</a></li>
         </ul>
-        <a href="#" class="cabinet">{{ "LogIn" | translate }}</a>
+        <!-- <a href="#" class="cabinet">{{ "LogIn" | translate }}</a> -->
         
         <select v-model="lang" id="lang-selector" >
           <option value="pl">pl</option>
