added new section + some fixes

--- a/_includes/sections/helpfulArticles.html
+++ b/_includes/sections/helpfulArticles.html
@@ -2,7 +2,7 @@
 <div class="suggest">
     <div class="container fx fx-wrap">
         <div class="suggest-txt col-2">
-            <h2 class="title-h2 col-white">Zaproponuj nowy prezent!</h2>
+            <h2 class="title-h2 col-white">Te artykuły mogą Ci pomóc!</h2>
             <p>
                 Форум — мероприятие, проводимое для обозначения или решения
                 каких-либо
@@ -13,7 +13,7 @@
                 многих других сферах жизнедеятельности современного
                 общества.
             </p>
-            <a href="#" class="link-more">Dodaj swój prezent<span></span></a>
+            <a href="#" class="link-more">Dodaj nowy artykuł<span></span></a>
         </div>
         <div class="suggest-group col-2">
             <!-- Item 1 -->
