added statistics links

--- a/_includes/sections/giftSuggestion.html
+++ b/_includes/sections/giftSuggestion.html
@@ -4,14 +4,7 @@
         <div class="suggest-txt col-2">
             <h2 class="title-h2 col-white">Zaproponuj nowy prezent!</h2>
             <p>
-                Форум — мероприятие, проводимое для обозначения или решения
-                каких-либо
-                в достаточной степени глобальных проблем. Это понятие
-                встречается в
-                политических, экономических, социальных, религиозных,
-                экологических и
-                многих других сферах жизнедеятельности современного
-                общества.
+                Mozesz zaproponować nowy prezent który uwazasz za godny ale którego jeszcze nie ma na naszej liście.
             </p>
             <a href="#" class="link-more">Dodaj swój prezent<span></span></a>
         </div>
