--- a/_includes/sections/helpfulArticles.html
+++ b/_includes/sections/helpfulArticles.html
@@ -1,33 +1,78 @@
 {% raw %}
 <div class="suggest">
-    <div class="container fx fx-wrap">
-        <div class="suggest-txt col-2">
-            <h2 class="title-h2 col-white">Te artykuły mogą Ci pomóc!</h2>
-            <p>
-                Форум — мероприятие, проводимое для обозначения или решения
-                каких-либо
-                в достаточной степени глобальных проблем. Это понятие
-                встречается в
-                политических, экономических, социальных, религиозных,
-                экологических и
-                многих других сферах жизнедеятельности современного
-                общества.
-            </p>
-            <a href="#" class="link-more">Dodaj nowy artykuł<span></span></a>
+    <div class="container fx fx-wrap articles">
+        <div class="col-1 articles-title">
+            <h2 class="title-h2 col-white text-center">Te artykuły mogą Ci pomóc!</h2>
         </div>
-        <div class="suggest-group col-2">
-            <!-- Item 1 -->
+        <!-- <div class="suggest-group col-2">
 
             <div class="suggest-item">
                 <span class="line bg-light-silver"></span>
                 <span class="line bg-light-silver"></span>
             </div>
 
-            <!-- Item 2 -->
 
             <div class="suggest-item">
                 <span class="line bg-light-orange"></span>
                 <span class="line bg-light-orange"></span>
+            </div>
+        </div> -->
+
+        <div class="row fx fx-wrap">
+            <!-- Item 1 -->
+
+            <div class="col-2">
+                <div class="give-item">
+                    <h3><span class="i-toy"></span>Jak dobrze wybrać zabawkę</h3>
+                    <p>
+                        Tu będzie teskt o tym jak dobrze wybrać zabawkę. Tu będzie teskt o tym jak dobrze wybrać zabawkę.
+                        Tu będzie teskt o tym jak dobrze wybrać zabawkę. Tu będzie teskt o tym jak dobrze wybrać zabawkę.
+                        Tu będzie teskt o tym jak dobrze wybrać zabawkę. Tu będzie teskt o tym jak dobrze wybrać zabawkę.
+                        Tu będzie teskt o tym jak dobrze wybrać zabawkę. Tu będzie teskt o tym jak dobrze wybrać zabawkę.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Item 2 -->
+
+            <div class="col-2">
+                <div class="give-item">
+                    <h3><span class="i-souvenir"></span>Dlaczego pamiątki zapamiętają się</h3>
+                    <p>
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Item 3 -->
+
+            <div class="col-2">
+                <div class="give-item">
+                    <h3><span class="i-brilliant"></span>Bizuteria</h3>
+                    <p>
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Item 4 -->
+
+            <div class="col-2">
+                <div class="give-item">
+                    <h3><span class="i-creative"></span>Hand made</h3>
+                    <p>
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                        Tu będzie teskt o tym jak dobrze wybrać pamiątkę. Tu będzie teskt o tym jak dobrze wybrać pamiątkę.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
