--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
   <![endif]-->
     <!-- Vue scripts -->
     <script type="module" src="assets/js/vueBodyApp.js"></script>
+    <script type="module" src="assets/js/statisticsLinks.js"></script>
 </body>
 
 </html>
