--- a/_includes/sections/statisticsLinks.html
+++ b/_includes/sections/statisticsLinks.html
@@ -1,6 +1,6 @@
 <!-- TODO -->
 {% raw %}
-<div class="give">
+<div class="give" id="statistics-link-section">
     <div class="container">
         <!-- Title -->
 
@@ -9,78 +9,25 @@
         <!-- Row -->
 
         <div class="row fx fx-wrap">
-            <!-- Item 1 -->
 
-            <div class="col-2">
-                <div class="give-item">
-                    <h3><span class="i-toy"></span>Игрушки</h3>
-                    <p>
-                        Воссоздавая реальные и воображаемые предметы,
-                        образы, игрушка
-                        служит целям умственного, нравственного,
-                        эстетического и
-                        физического воспитания ребёнка, помогая ему
-                        познавать окружающий
-                        мир, приучая к целенаправленной, осмысленной
-                        деятельности и
-                        способствуя развитию мышления, памяти, речи,
-                        эмоций.
-                    </p>
+            <div v-for="link in statisticsLinks" class="col-4 statistics-link-container">
+                <div class="statistics-link">
+                    <a v-bind:href="link.link">
+                        <table>
+                            <tr>
+                                <td>
+                                    <img v-bind:src="link.img">
+                                </td>
+                                <td>
+                                    <div class="statistics-link-text">{{ link.text | translate }}</div>
+                                </td>
+                            </tr>
+                        </table>
+                    </a>
+                    <!-- <div class="green-arrow"></div> -->
                 </div>
             </div>
 
-            <!-- Item 2 -->
-
-            <div class="col-2">
-                <div class="give-item">
-                    <h3><span class="i-souvenir"></span>Сувениры</h3>
-                    <p>
-                        Сувениры несут колорит места, в котором они были
-                        произведены и
-                        приобретены. Это может быть эмблема города,
-                        изображение памятного
-                        места, объект культуры. Это могут быть предметы,
-                        которыми славится
-                        местное производство
-                    </p>
-                </div>
-            </div>
-
-            <!-- Item 3 -->
-
-            <div class="col-2">
-                <div class="give-item">
-                    <h3><span class="i-brilliant"></span>Драгоценности</h3>
-                    <p>
-                        Драгоценности могут выступать как дорогая вещь,
-                        например,
-                        ювелирные изделия, предмет важного исторического и
-                        общественного
-                        значения, то что представляется особенно дорогим и
-                        памятным для
-                        кого-либо, является талантливым, самобытным,
-                        отличается
-                        необходимыми для культуры качествами, свойствами.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Item 4 -->
-
-            <div class="col-2">
-                <div class="give-item">
-                    <h3><span class="i-creative"></span>Креатив</h3>
-                    <p>
-                        В повседневной жизни творческие способности
-                        проявляются как
-                        смекалка это способность достигать цели, находить
-                        выход из
-                        кажущейся безвыходной ситуации, используя
-                        обстановку, предметы и
-                        обстоятельства необычным образом.
-                    </p>
-                </div>
-            </div>
         </div>
     </div>
 </div>
