--- a/_includes/sections/statisticsLinks.html
+++ b/_includes/sections/statisticsLinks.html
@@ -11,7 +11,7 @@
         <div class="row fx fx-wrap">
 
             <div v-for="link in statisticsLinks" class="col-4 statistics-link-container">
-                <div class="statistics-link">
+                <div class="statistics-link animate">
                     <a v-bind:href="link.link">
                         <table>
                             <tr>
