added addGift view with file loader + some refactoring

--- a/_includes/sections/giftSuggestion.html
+++ b/_includes/sections/giftSuggestion.html
@@ -6,7 +6,7 @@
             <p>
                 Mozesz zaproponować nowy prezent który uwazasz za godny ale którego jeszcze nie ma na naszej liście.
             </p>
-            <a href="#" class="link-more">Dodaj swój prezent<span></span></a>
+            <a href="addGift.html" class="link-more">Dodaj swój prezent<span></span></a>
         </div>
         <div class="suggest-group col-2">
             <!-- Item 1 -->
