--- a/_includes/sections/statisticsLinks.html
+++ b/_includes/sections/statisticsLinks.html
@@ -4,7 +4,7 @@
     <div class="container">
         <!-- Title -->
 
-        <h2 class="title-h2 col-white text-center">Statystyki</h2>
+        <h2 class="title-h2 col-white text-center">Prezenty</h2>
 
         <!-- Row -->
 
