--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,29 +14,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/img/icons/favicon.ico" />
 
-
-    <!-- LOADING BOOTSTRAP -->
-    <!-- Latest compiled and minified CSS -->
+    <!-- STYLES -->
+    <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <!-- load styles -->
+    <!-- file-upload-with-preview styles -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.min.css">
     
+    <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/fonts.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/media.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
 
+    <!-- JS -->
+
     <!-- Vue js loading -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- jQuery loading -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- aws.js loading -->
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
+    <!-- file-upload-with-preview loading -->
+    <script src="https://unpkg.com/file-upload-with-preview"></script>
     <!-- Custom js loading -->
     <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/lang.js"></script>
@@ -62,6 +66,7 @@
     <!-- Vue scripts -->
     <script type="module" src="assets/js/vueBodyApp.js"></script>
     <script type="module" src="assets/js/statisticsLinks.js"></script>
+    <script type="module" src="assets/js/aws.js"></script>
 </body>
 
 </html>
